--- a/index.html
+++ b/index.html
@@ -5,11 +5,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Transfer Market</title>
 </head>
 
 <body>
+    <div class="grid grid-cols-4 gap-6 w-9/12 mx-auto mt-8">
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div class="">
+            <div class="bg-zinc-800 text-white text-center">
+                <h1 class="text-2xl font-medium py-6">Selected-V</h1>
+                <li>
+                    <ul>1</ul>
+                    <ul>1</ul>
+                    <ul>1</ul>
+                    <ul>1</ul>
+                    <ul>1</ul>
+                </li>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800">
+                <img src="Image/messireeeeee.jpg" alt="">
+                <div class="text-center m-2 text-white">
+                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                    <p class="mt-2">36 Goals | 120 Assist</p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="bg-zinc-800 text-white ">
+                <h1 class="text-2xl font-medium py-6 text-center">Budget</h1>
+                <p class="inline ml-5">Per Player</p>
+                <input class="w-32 ml-5 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+            </div>
+        </div>
 
+    </div>
 </body>
 
 </html>
