budget box design complete

--- a/index.html
+++ b/index.html
@@ -10,89 +10,110 @@
 </head>
 
 <body>
-    <div class="grid grid-cols-4 gap-6 w-9/12 mx-auto mt-8">
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+    <section>
+        <div class="grid grid-cols-4 gap-6 w-9/12 mx-auto mt-8 mb-8">
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="">
-            <div class="bg-zinc-800 text-white text-center">
-                <h1 class="text-2xl font-medium py-6">Selected-V</h1>
-                <li>
-                    <ul>1</ul>
-                    <ul>1</ul>
-                    <ul>1</ul>
-                    <ul>1</ul>
-                    <ul>1</ul>
-                </li>
-            </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800">
-                <img src="Image/messireeeeee.jpg" alt="">
-                <div class="text-center m-2 text-white">
-                    <h1 class="text-2xl font-medium">Leonel Messi</h1>
-                    <p class="mt-2">36 Goals | 120 Assist</p>
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="bg-zinc-800 text-white ">
-                <h1 class="text-2xl font-medium py-6 text-center">Budget</h1>
-                <p class="inline ml-5">Per Player</p>
-                <input class="w-32 ml-5 bg-zinc-800 border-2 border-inherit h-9 " type="text">
-                <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-5 py-1 w-48  font-medium">SELECT</button>
-            </div>
-        </div>
+            <div class="">
+                <div class="bg-zinc-800 text-white half-width ">
+                    <h1 class="text-center text-2xl font-medium py-7">Selected-V</h1>
+                    <div class="">
+                        <li class="py-14 ml-4 text-2xl">
+                            <ul>1</ul>
+                            <ul>1</ul>
+                            <ul>1</ul>
+                            <ul>1</ul>
 
-    </div>
+                        </li>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="bg-zinc-800">
+                    <img src="Image/messireeeeee.jpg" alt="">
+                    <div class="text-center m-2 text-white">
+                        <h1 class="text-2xl font-medium">Leonel Messi</h1>
+                        <p class="mt-2">36 Goals | 120 Assist</p>
+                        <button
+                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="bg-zinc-800 text-white">
+                    <h1 class="text-2xl font-medium py-6 text-center">Budget</h1>
+                    <p class="inline ml-5">Per Player</p>
+                    <input class="w-32 ml-5 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-5 py-1 w-56 h-9 font-medium">SELECT
+                    </button>
+                    <p class="ml-5 mb-2">Player Expences &nbsp &nbsp &nbsp <span>$50000</span></p>
+                    <p class="inline ml-5">Manager</p>
+                    <input class="w-32 mb-2 ml-7 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                    <p class="inline ml-5">Coach</p>
+                    <input class="w-32 ml-12 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">SELECT
+                    </button>
+                    <p class="inline ml-5">Total</p>
+                    <p class="inline ml-28 text-red-400 mb-4">$<span>000000</span> </p>
+                    <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">RESET
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
