--- a/index.html
+++ b/index.html
@@ -7,9 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Transfer Market</title>
+    <style>
+        .banner {
+            display: flex;
+        }
+    </style>
 </head>
 
-<body>
+<body class="bg-gray-900">
+    <header>
+        <div class="banner bg-black text-white">
+            <div>
+                <img class="mt-10"
+                    src="https://www.transparentpng.com/thumb/lionel-messi/B19jUh-lionel-messi-simple.png" alt="">
+            </div>
+            <div class="text-center mt-20 ml-12 ">
+                <h1 class="text-7xl text-orange-500 font-bold mb-10 ">
+                    Select Your Best Five
+                </h1>
+                <div class="px-28">
+                    <p class=" px-10">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias eaque
+                        corporis obcaecati
+                        fugiat
+                        laborum nobis alias minus a. Fugiat illo commodi velit quidem modi sapiente rerum cum unde, quis
+                        harum!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </header>
     <section>
         <div class="grid grid-cols-4 gap-6 w-9/12 mx-auto mt-8 mb-8">
             <div>
@@ -107,13 +133,20 @@
                     <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">SELECT
                     </button>
                     <p class="inline ml-5">Total</p>
-                    <p class="inline ml-28 text-red-400 mb-4">$<span>000000</span> </p>
+                    <p class="inline ml-28 text-red-400 ">$<span>000000</span> </p>
                     <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">RESET
                     </button>
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div>
+            <div class="bg-gray-600 py-16">
+                <p class="text-center text-white">Copyright @ 2022 All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
