--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Sargio Ramous</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
-                        <button
-                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                        <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium"
+                            onclick=" addToCart(this); this.disabled = true;">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -93,8 +93,8 @@
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Leonel Messi</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
-                        <button
-                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                        <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium"
+                            onclick=" addToCart(this); this.disabled = true;">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -104,8 +104,8 @@
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Leonel Messi</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
-                        <button
-                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                        <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium"
+                            onclick=" addToCart(this); this.disabled = true;">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -115,8 +115,8 @@
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Leonel Messi</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
-                        <button
-                            class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium">SELECT</button>
+                        <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium"
+                            onclick=" addToCart(this); this.disabled = true;">SELECT</button>
                     </div>
                 </div>
             </div>
