--- a/index.html
+++ b/index.html
@@ -132,15 +132,17 @@
                     <button id="players-cost-btn"
                         class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-5 py-1 w-56 h-9 font-medium">SELECT
                     </button>
-                    <p class="ml-5 mb-2">Player Expences &nbsp &nbsp &nbsp &nbsp $<span id="playerExpences"></span></p>
+                    <p class="ml-5 mb-2">Player Expences $<span id="playerExpences"></span></p>
                     <p class="inline ml-5">Manager</p>
-                    <input class="w-32 mb-2 ml-7 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                    <input id="manager-expences" class="w-32 mb-2 ml-7 bg-zinc-800 border-2 border-inherit h-9 "
+                        type="text">
                     <p class="inline ml-5">Coach</p>
-                    <input class="w-32 ml-12 bg-zinc-800 border-2 border-inherit h-9 " type="text">
-                    <button class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">SELECT
+                    <input id="coach-expences" class="w-32 ml-12 bg-zinc-800 border-2 border-inherit h-9 " type="text">
+                    <button id="total-expences-btn"
+                        class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-4 py-1 w-56 h-9 font-medium">SELECT
                     </button>
                     <p class="inline ml-5">Total</p>
-                    <p class="inline ml-28 text-red-400 ">$<span>000000</span> </p>
+                    <p class="inline ml-28 text-red-400 ">$<span id="total-expences"></span> </p>
 
                 </div>
             </div>
