heading and image update

--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
                     src="https://www.transparentpng.com/thumb/lionel-messi/B19jUh-lionel-messi-simple.png" alt="">
             </div>
             <div class="text-center mt-20 ml-12 ">
-                <h1 class="text-7xl text-orange-500 font-bold mb-10 ">
-                    Select Your Best Five
+                <h1 class="text-6xl text-orange-500 font-bold mb-10 ">
+                    Select Transfer Market's Best Five
                 </h1>
                 <div class="px-28">
-                    <p class=" px-10">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias eaque
-                        corporis obcaecati
-                        fugiat
-                        laborum nobis alias minus a. Fugiat illo commodi velit quidem modi sapiente rerum cum unde, quis
-                        harum!
+                    <p class=" px-10">The transfer market is the arena in which football players are available for
+                        transfer to clubs. The transfer market consists of a list of players available for transfer, and
+                        also the money moving between clubs as they contest to purchase and sell these players.
                     </p>
                 </div>
             </div>
@@ -60,7 +58,7 @@
             </div>
             <div>
                 <div class="bg-zinc-800">
-                    <img src="Image/messireeeeee.jpg" alt="">
+                    <img src="Image/neimar.jpg" alt="">
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Neymar Jr</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
@@ -72,9 +70,9 @@
             </div>
             <div>
                 <div class="bg-zinc-800">
-                    <img src="Image/messireeeeee.jpg" alt="">
+                    <img src="Image/ramos.jpg" alt="">
                     <div class="text-center m-2 text-white">
-                        <h1 class="text-2xl font-medium">Sargio Ramous</h1>
+                        <h1 class="text-2xl font-medium">Sargio Ramos</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
                         <button class="bg-amber-500 hover:bg-sky-700 px-5 mt-4 mb-5 py-1 w-48 h-9 font-medium"
                             onclick=" addToCart(this); this.disabled = true;">SELECT</button>
@@ -93,7 +91,7 @@
             </div>
             <div>
                 <div class="bg-zinc-800">
-                    <img src="Image/messireeeeee.jpg" alt="">
+                    <img src="Image/Vítor.jpg" alt="">
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Vítor Machado</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
@@ -104,7 +102,7 @@
             </div>
             <div>
                 <div class="bg-zinc-800">
-                    <img src="Image/messireeeeee.jpg" alt="">
+                    <img src="Image/Renato.jpg" alt="">
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Renato Sanches</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
@@ -115,7 +113,7 @@
             </div>
             <div>
                 <div class="bg-zinc-800">
-                    <img src="Image/messireeeeee.jpg" alt="">
+                    <img src="Image/Kylian.jpg" alt="">
                     <div class="text-center m-2 text-white">
                         <h1 class="text-2xl font-medium">Kylian Mbappé</h1>
                         <p class="mt-2">36 Goals | 120 Assist</p>
@@ -132,7 +130,7 @@
                     <button id="players-cost-btn"
                         class="bg-amber-500 hover:bg-sky-700 px-5 ml-5 mt-4 mb-5 py-1 w-56 h-9 font-medium">SELECT
                     </button>
-                    <p class="ml-5 mb-2">Player Expences $<span id="playerExpences"></span></p>
+                    <p class="ml-5 mb-2">Player Expences &nbsp &nbsp &nbsp &nbsp $<span id="playerExpences"></span></p>
                     <p class="inline ml-5">Manager</p>
                     <input id="manager-expences" class="w-32 mb-2 ml-7 bg-zinc-800 border-2 border-inherit h-9 "
                         type="text">
