implement disable button with color

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="text-center mt-20 ml-12 ">
                 <h1 class="text-6xl text-orange-500 font-bold mb-10 ">
-                    Select Transfer Market's Best Five
+                    Grab Transfer Market's Best Five
                 </h1>
                 <div class="px-28">
                     <p class=" px-10">The transfer market is the arena in which football players are available for
@@ -83,7 +83,7 @@
                 <div class="bg-zinc-800 text-white cart-div ">
                     <h1 class="text-center text-2xl font-medium py-7">Selected - <span id="player-list">V</span> </h1>
                     <div class="overflow-x-auto">
-                        <ol id="cart-list" class="ml-16">
+                        <ol id="cart-list" class="ml-16 c">
 
                         </ol>
                     </div>
@@ -141,7 +141,6 @@
                     </button>
                     <p class="inline ml-5">Total</p>
                     <p class="inline ml-28 text-red-400 ">$<span id="total-expences"></span> </p>
-
                 </div>
             </div>
         </div>
