added some comment

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body class="bg-gray-900">
+    <!-- header start -->
     <header>
         <div class="banner bg-black text-white">
             <div>
@@ -34,7 +35,8 @@
                     Grab Transfer Market's Best Five
                 </h1>
                 <div class="px-28">
-                    <p class=" px-10">The transfer market is the arena in which football players are available for
+                    <p class="px-10">The transfer market is the arena in which football players are available
+                        for
                         transfer to clubs. The transfer market consists of a list of players available for transfer, and
                         also the money moving between clubs as they contest to purchase and sell these players.
                     </p>
@@ -42,7 +44,9 @@
             </div>
         </div>
     </header>
+    <!-- header end -->
     <section>
+        <!-- card start  -->
         <div class="grid grid-cols-4 gap-6 w-9/12 mx-auto mt-8 mb-8">
             <div>
                 <div class="bg-zinc-800">
@@ -79,6 +83,7 @@
                     </div>
                 </div>
             </div>
+            <!-- cart item list  -->
             <div class="cart-div">
                 <div class="bg-zinc-800 text-white cart-div ">
                     <h1 class="text-center text-2xl font-medium py-7">Selected - <span id="player-list">V</span> </h1>
@@ -122,6 +127,7 @@
                     </div>
                 </div>
             </div>
+            <!-- budget box -->
             <div class="">
                 <div class="budget-div bg-zinc-800 text-white">
                     <h1 class="text-2xl font-medium py-6 text-center">Budget</h1>
@@ -144,10 +150,12 @@
                 </div>
             </div>
         </div>
+        <!-- card end -->
     </section>
+    <!-- footer  -->
     <footer>
         <div>
-            <div class="bg-gray-600 py-16">
+            <div class="bg-black py-16">
                 <p class="text-center text-white">Copyright @ 2022 All Rights Reserved</p>
             </div>
         </div>
