final push after submission

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="bg-zinc-800 text-white cart-div ">
                     <h1 class="text-center text-2xl font-medium py-7">Selected - <span id="player-list">V</span> </h1>
                     <div class="overflow-x-auto">
-                        <ol id="cart-list" class="ml-16 c">
+                        <ol id="cart-list" class="ml-16 player-number">
 
                         </ol>
                     </div>
